@@ -104,7 +104,7 @@ The command must return a list containing three elements:
 <LI>the list of acceptable basic operations (<B>copy</B>, <B>move</B> and <B>link</B>)
 <LI>and the data.
 </UL>
-Note that even if <B>copy</I> does not appear in the list of basic operation,
+Note that even if <B>copy</B> does not appear in the list of basic operation,
 it is considered as an acceptable operation, since <B>copy</B> semantic does not modify
 the drag source.
 
